BUG FIX: Remove height: auto from image style. This causes images to be vertically stretched in Safari (WebKit).

--- a/web/themes/custom/abrsd/scss/style.scss
+++ b/web/themes/custom/abrsd/scss/style.scss
@@ -106,6 +106,5 @@ a.nav-link--::before {
 .card {
   img {
     max-width: 100%;
-    height: 100%;
   }
 }
